fixed spacing on main content and text shadown under 700px

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,12 @@ body {
 }
 
 section {
+    align-items: center;
+    display: flex;
     flex-basis: 25em;
+    flex-direction: column;
+    gap: 2em;
+    padding-top: 3em;
 }
 
 #contact {
@@ -48,6 +53,14 @@ section {
 }
 
 @media all and (max-width: 700px) {
+    header h1 {
+        text-shadow: 1px 1px #9d3c72;
+    }
+    
+    section p {
+        padding: 0 1em;
+    }
+    
     #contact {
         flex-wrap: wrap;
     }
@@ -91,5 +104,6 @@ section {
 }
 
 section p {
+    line-height: 1.7;
     max-width: 70ch;
 }
